Allow lenient cross submits as config